--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-debug=true
-
-spring.h2-console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.profiles.active=PROD
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
